# CrypTek

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  WINDOWS_BUILD.md  cryptek.py  cryptek_cli.py  cryptek_gui.py  cryptek_gui_app.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml
scripts/: build_new.py
src/cryptek/: __init__.py
src/cryptek/cli/: __init__.py  main.py  parser.py
src/cryptek/core/: __init__.py  algorithms.py  config.py  constants.py  crypto_engine.py  exceptions.py  metadata.py
src/cryptek/gui/: __init__.py  main.py
src/cryptek/utils/: __init__.py  file_operations.py  logger.py  permissions.py  validation.py
tests/: __init__.py  test_crypto_engine.py
